--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
             <ul>
                 <li><a href="#calendar">Calendar</a></li>
                 <li><a href="#gallery">Gallery</a></li>
+                <li><a href="#contacts">Contacts</a></li>
             </ul>
         </nav>
     </header>
@@ -32,6 +33,50 @@
         </div>
     </section>
 
+    <section id="contacts">
+        <h2>Contacts</h2>
+            <table>
+                <thead>
+                    <tr>
+                        <th>Name</th>
+                        <th>Phone</th>
+                        <th>Email</th>
+                        <th>Role</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td>Row 1, Col 1</td>
+                        <td>Row 1, Col 2</td>
+                        <td>Row 1, Col 3</td>
+                        <td>Row 1, Col 4</td>
+                    </tr>
+                    <tr>
+                        <td>Row 2, Col 1</td>
+                        <td>Row 2, Col 2</td>
+                        <td>Row 2, Col 3</td>
+                        <td>Row 2, Col 4</td>
+                    </tr>
+                    <tr>
+                        <td>Row 3, Col 1</td>
+                        <td>Row 3, Col 2</td>
+                        <td>Row 3, Col 3</td>
+                        <td>Row 3, Col 4</td>
+                    </tr>
+                    <tr>
+                        <td>Row 4, Col 1</td>
+                        <td>Row 4, Col 2</td>
+                        <td>Row 4, Col 3</td>
+                        <td>Row 4, Col 4</td>
+                    </tr>
+                    <tr>
+                        <td>Row 5, Col 1</td>
+                        <td>Row 5, Col 2</td>
+                        <td>Row 5, Col 3</td>
+                        <td>Row 5, Col 4</td>
+                    </tr>
+                </tbody>
+            </table>
     <footer>
         <p>&copy; 2025 Haven Drive Home. All rights reserved.</p>
     </footer>
