--- a/index.html
+++ b/index.html
@@ -3,16 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Minimalist Website</title>
+    <title>Haven Drive Home</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header>
-        <h1>Minimalist Gallery</h1>
+        <h1>Haven Drive Home for the Ornery</h1>
+        <p>Let this be your single point of truth for everything happening on Haven Drive.</p>
         <nav>
             <ul>
                 <li><a href="#calendar">Calendar</a></li>
-                <li><a href="#gallery">Gallery</a></li>
+                <li><a href="#projects">Projects</a></li>
                 <li><a href="#contacts">Contacts</a></li>
             </ul>
         </nav>
