--- a/index.html
+++ b/index.html
@@ -21,12 +21,12 @@
 
     <section id="calendar">
        <h2>Calendar</h2>
-        <iframe src="https://calendar.google.com/calendar/embed?src=16b47ba3c91b244134a1f39c2efd32928b2e3d7aa2b57161900724d663cecea4%40group.calendar.google.com&amp;ctz=America%2FNew_York" style="border: 0" width="800" height="600" frameborder="0" scrolling="no"></iframe>
+        <iframe src="https://calendar.google.com/calendar/embed?src=16b47ba3c91b244134a1f39c2efd32928b2e3d7aa2b57161900724d663cecea4%40group.calendar.google.com&amp;ctz=America%2FNew_York" style="border: 0" width="800" height="600" frameborder="0" scrolling="no" style="text-align: center;"></iframe>
     </section>
 
     <section id="projects">
         <h2>Projects</h2>
-<iframe src="https://docs.google.com/spreadsheets/d/e/2PACX-1vQ4MWUBJZPvBq1tgqsv7Xr_qqkrXZwcUpbBORNS-guxgyufva6a1ymnmDFEVmUpkR8bn9xLiraKGvgv/pubhtml?gid=0&amp;single=true&amp;widget=true&amp;headers=false"></iframe>
+<iframe src="https://docs.google.com/spreadsheets/d/e/2PACX-1vQ4MWUBJZPvBq1tgqsv7Xr_qqkrXZwcUpbBORNS-guxgyufva6a1ymnmDFEVmUpkR8bn9xLiraKGvgv/pubhtml?gid=0&amp;single=true&amp;widget=true&amp;headers=false" style="text-align: center;"></iframe>
         <div class="image-grid">
             <img src="image1.jpg" alt="wheelchair" height=200 width=200>
             <img src="image1.jpg" alt="Accessible shower" height=200 width=200>
