--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@
         <h2>Projects</h2>
 <iframe src="https://docs.google.com/spreadsheets/d/e/2PACX-1vQ4MWUBJZPvBq1tgqsv7Xr_qqkrXZwcUpbBORNS-guxgyufva6a1ymnmDFEVmUpkR8bn9xLiraKGvgv/pubhtml?gid=0&amp;single=true&amp;widget=true&amp;headers=false" style="display: block; margin-left: auto; margin-right: auto;"></iframe>
         <div class="image-grid">
-            <img src="wheelchair.webp" alt="wheelchair" height=200 width=200>
-            <img src="Tile-Roll-In-Shower-Pic-Litz-3938-768x768.jpg" alt="Accessible shower" height=200 width=200>
-            <img src="with-drive-1_2-rales.webp" alt="Bed" height=200 width=200>
+            <img src="wheelchair.webp" alt="wheelchair">
+            <img src="Tile-Roll-In-Shower-Pic-Litz-3938-768x768.jpg" alt="Accessible shower">
+            <img src="with-drive-1_2-rales.webp" alt="Bed">
         </div>
     </section>
 
