--- a/index.html
+++ b/index.html
@@ -21,7 +21,9 @@
 
     <section id="calendar">
        <h2>Calendar</h2>
-        <iframe class="center-iframe" src="https://calendar.google.com/calendar/embed?src=16b47ba3c91b244134a1f39c2efd32928b2e3d7aa2b57161900724d663cecea4%40group.calendar.google.com&amp;ctz=America%2FNew_York" style="border: 0" width="800" height="600" frameborder="0" scrolling="no" style="display: block; margin-left: auto; margin-right: auto;"></iframe>
+        <div class="center-iframe">
+            <iframe src="https://calendar.google.com/calendar/embed?src=16b47ba3c91b244134a1f39c2efd32928b2e3d7aa2b57161900724d663cecea4%40group.calendar.google.com&amp;ctz=America%2FNew_York" style="border: 0" width="800" height="600" frameborder="0" scrolling="no"></iframe>
+        </div>
     </section>
 
     <section id="projects">
