--- a/index.html
+++ b/index.html
@@ -21,9 +21,7 @@
 
     <section id="calendar">
        <h2>Calendar</h2>
-        <div class="center-iframe">
-            <iframe src="https://calendar.google.com/calendar/embed?src=16b47ba3c91b244134a1f39c2efd32928b2e3d7aa2b57161900724d663cecea4%40group.calendar.google.com&amp;ctz=America%2FNew_York" style="border: 0" width="800" height="600" frameborder="0" scrolling="no"></iframe>
-        </div>
+            <iframe src="https://calendar.google.com/calendar/embed?src=16b47ba3c91b244134a1f39c2efd32928b2e3d7aa2b57161900724d663cecea4%40group.calendar.google.com&amp;ctz=America%2FNew_York" style="border: 0" width="800" height="600" frameborder="0" scrolling="no" style="display: block; margin: auto;"></iframe>
     </section>
 
     <section id="projects">
@@ -49,22 +47,22 @@
                 </thead>
                 <tbody>
                     <tr>
-                        <td>Row 1, Col 1</td>
-                        <td>Row 1, Col 2</td>
-                        <td>Row 1, Col 3</td>
-                        <td>Row 1, Col 4</td>
+                        <td>Verlin Shuler</td>
+                        <td>865-244-0244</td>
+                        <td>n/a</td>
+                        <td>Shower reno guy (friend of Debbie's)</td>
                     </tr>
                     <tr>
-                        <td>Row 2, Col 1</td>
-                        <td>Row 2, Col 2</td>
+                        <td>David Martinez</td>
+                        <td>828-550-1892</td>
                         <td>Row 2, Col 3</td>
-                        <td>Row 2, Col 4</td>
+                        <td>installing ramp to back door</td>
                     </tr>
                     <tr>
-                        <td>Row 3, Col 1</td>
+                        <td>Hillary O'Neill</td>
                         <td>Row 3, Col 2</td>
                         <td>Row 3, Col 3</td>
-                        <td>Row 3, Col 4</td>
+                        <td>Occupational Therapist & certified geriatric care; did in-home accommodation assessment</td>
                     </tr>
                     <tr>
                         <td>Row 4, Col 1</td>
