--- a/index.html
+++ b/index.html
@@ -60,8 +60,8 @@
                     </tr>
                     <tr>
                         <td>Hillary O'Neill</td>
-                        <td>Row 3, Col 2</td>
-                        <td>Row 3, Col 3</td>
+                        <td>n/a</td>
+                        <td>hboneill8@gmail.com</td>
                         <td>Occupational Therapist & certified geriatric care; did in-home accommodation assessment</td>
                     </tr>
                     <tr>
