--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
     <section id="projects">
         <h2>Projects</h2>
-<iframe class="responsive-iframe" src="https://docs.google.com/spreadsheets/d/e/2PACX-1vQ4MWUBJZPvBq1tgqsv7Xr_qqkrXZwcUpbBORNS-guxgyufva6a1ymnmDFEVmUpkR8bn9xLiraKGvgv/pubhtml?gid=0&amp;single=true&amp;widget=true&amp;headers=false" style="display: block; margin-left: auto; margin-right: auto;"></iframe>
+<iframe class="responsive-iframe" src="https://docs.google.com/spreadsheets/d/e/2PACX-1vQ4MWUBJZPvBq1tgqsv7Xr_qqkrXZwcUpbBORNS-guxgyufva6a1ymnmDFEVmUpkR8bn9xLiraKGvgv/pubhtml?gid=0&amp;single=true&amp;widget=true&amp;headers=false" style="border: 0" width="1000" height="600" frameborder="0" scrolling="no" style="display: block; margin-left: auto; margin-right: auto;"></iframe>
         <div class="image-grid">
             <img src="wheelchair.webp" alt="wheelchair">
             <img src="Tile-Roll-In-Shower-Pic-Litz-3938-768x768.jpg" alt="Accessible shower">
