--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
             <ul>
                 <li><a href="#calendar">Calendar</a></li>
                 <li><a href="#projects">Projects</a></li>
+                <li><a href="#gallery">Gallery</a></li>
                 <li><a href="#contacts">Contacts</a></li>
             </ul>
         </nav>
@@ -27,6 +28,10 @@
     <section id="projects">
         <h2>Projects</h2>
             <iframe class="responsive-iframe" src="https://docs.google.com/spreadsheets/d/e/2PACX-1vQ4MWUBJZPvBq1tgqsv7Xr_qqkrXZwcUpbBORNS-guxgyufva6a1ymnmDFEVmUpkR8bn9xLiraKGvgv/pubhtml?gid=0&amp;single=true&amp;widget=true&amp;headers=false" style="border: 3" width="1200" height="500" scrolling="no"></iframe>
+    </section>
+    
+    <section id="gallery">
+        <h2>Gallery</h2>
         <div class="image-grid">
             <img src="wheelchair.webp" alt="wheelchair">
             <img src="Tile-Roll-In-Shower-Pic-Litz-3938-768x768.jpg" alt="Accessible shower">
