--- a/index.html
+++ b/index.html
@@ -22,12 +22,16 @@
 
     <section id="calendar">
        <h2>Calendar</h2>
-            <iframe class="responsive-iframe" src="https://calendar.google.com/calendar/embed?src=16b47ba3c91b244134a1f39c2efd32928b2e3d7aa2b57161900724d663cecea4%40group.calendar.google.com&amp;ctz=America%2FNew_York" style="border: 0" width="1000" height="600" frameborder="0" scrolling="no" style="display: block; margin: auto;"></iframe>
+            <div class="iframe-container">
+                <iframe src="https://calendar.google.com/calendar/embed?src=16b47ba3c91b244134a1f39c2efd32928b2e3d7aa2b57161900724d663cecea4%40group.calendar.google.com&amp;ctz=America%2FNew_York" style="border: 0" width="1000" height="600" frameborder="0" scrolling="no" style="display: block; margin: auto;"></iframe>
+            </div>    
     </section>
 
     <section id="projects">
         <h2>Projects</h2>
-            <iframe class="responsive-iframe" src="https://docs.google.com/spreadsheets/d/e/2PACX-1vQ4MWUBJZPvBq1tgqsv7Xr_qqkrXZwcUpbBORNS-guxgyufva6a1ymnmDFEVmUpkR8bn9xLiraKGvgv/pubhtml?gid=0&amp;single=true&amp;widget=true&amp;headers=false" style="border: 3" width="1200" height="500" scrolling="no"></iframe>
+            <div class="iframe-container">
+                <iframe src="https://docs.google.com/spreadsheets/d/e/2PACX-1vQ4MWUBJZPvBq1tgqsv7Xr_qqkrXZwcUpbBORNS-guxgyufva6a1ymnmDFEVmUpkR8bn9xLiraKGvgv/pubhtml?gid=0&amp;single=true&amp;widget=true&amp;headers=false" style="border: 3" width="1200" height="500" scrolling="no"></iframe>
+            </div> 
     </section>
     
     <section id="gallery">
