--- a/index.html
+++ b/index.html
@@ -37,9 +37,9 @@
     <section id="gallery">
         <h2>Gallery</h2>
         <div class="image-grid">
-            <img src="wheelchair.webp" alt="wheelchair">
-            <img src="Tile-Roll-In-Shower-Pic-Litz-3938-768x768.jpg" alt="Accessible shower">
-            <img src="with-drive-1_2-rales.webp" alt="Bed">
+            <img src="Resized_20251205_094239.jpeg" alt="Shower half wall and entry">
+            <img src="imagejpeg_0.jpg.jpeg" alt="Shower entry and pan detail">
+            <img src="imagejpeg_1.jpg.jpeg" alt="Shower pan, interior view">
         </div>
     </section>
 
