--- a/index.html
+++ b/index.html
@@ -37,9 +37,9 @@
     <section id="gallery">
         <h2>Gallery</h2>
         <div class="image-grid">
-            <img src="Resized_20251205_094239.jpeg" alt="Shower half wall and entry">
-            <img src="imagejpeg_0.jpg.jpeg" alt="Shower entry and pan detail">
-            <img src="imagejpeg_1.jpg.jpeg" alt="Shower pan, interior view">
+            <img src="Resized_20251205_094239.jpeg" alt="Shower half wall and entry" title="Shower half wall and entry">
+            <img src="imagejpeg_0.jpg.jpeg" alt="Shower entry and pan detail" title="Shower entry and pan detail">
+            <img src="imagejpeg_1.jpg.jpeg" alt="Shower pan, interior view" title="Shower pan, interior view">
         </div>
     </section>
 
@@ -59,13 +59,13 @@
                         <td>Verlin Shuler</td>
                         <td>865-244-0244</td>
                         <td>n/a</td>
-                        <td>Shower reno guy (friend of Debbie's)</td>
+                        <td>Shower reno guy #2 (friend of Debbie's)</td>
                     </tr>
                     <tr>
                         <td>David Martinez</td>
                         <td>828-550-1892</td>
-                        <td>Row 2, Col 3</td>
-                        <td>installing ramp to back door</td>
+                        <td>n/a</td>
+                        <td>Installing ramp to back door</td>
                     </tr>
                     <tr>
                         <td>Hillary O'Neill</td>
@@ -74,16 +74,16 @@
                         <td>Occupational Therapist & certified geriatric care; did in-home accommodation assessment</td>
                     </tr>
                     <tr>
-                        <td>Row 4, Col 1</td>
-                        <td>Row 4, Col 2</td>
-                        <td>Row 4, Col 3</td>
-                        <td>Row 4, Col 4</td>
+                        <td>Dr. Shawn Bonsell</td>
+                        <td>828-694-7676</td>
+                        <td>https://www.unchealth.org/care-services/doctors/b/shawn-bonsell-md</td>
+                        <td>Orthopedic surgeon</td>
                     </tr>
                     <tr>
-                        <td>Row 5, Col 1</td>
-                        <td>Row 5, Col 2</td>
-                        <td>Row 5, Col 3</td>
-                        <td>Row 5, Col 4</td>
+                        <td>Dr. James Brien</td>
+                        <td>828-253-5314</td>
+                        <td>https://ashevilleurological.com/dr-brien.cfm</td>
+                        <td>Urologist</td>
                     </tr>
                 </tbody>
             </table>
