--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <h1>Haven Drive Home for the Ornery</h1>
         <p>Let this be your single point of truth for everything happening on Haven Drive.</p>
         <nav>
-            <ul>
+            <ul class="nav-buttons">
                 <li><a href="#calendar">Calendar</a></li>
                 <li><a href="#projects">Projects</a></li>
                 <li><a href="#gallery">Gallery</a></li>
