--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <header>
         <h1>Haven Drive Home for the Ornery</h1>
-        <p>Let this be your single point of truth for everything happening on Haven Drive.</p>
+        <p style="text-align: center;">Let this be your single point of truth for everything happening on Haven Drive.</p>
         <nav>
             <ul class="nav-buttons">
                 <li><a href="#calendar">Calendar</a></li>
