--- a/index.html
+++ b/index.html
@@ -40,6 +40,8 @@
             <img src="Resized_20251205_094239.jpeg" alt="Shower half wall and entry" title="Shower half wall and entry">
             <img src="imagejpeg_0.jpg.jpeg" alt="Shower entry and pan detail" title="Shower entry and pan detail">
             <img src="imagejpeg_1.jpg.jpeg" alt="Shower pan, interior view" title="Shower pan, interior view">
+            <p>Shower pan needs to be 5" deep or less</p>
+            <p>New bed dimensions: 36" W x 80" L x 20" H; frame is ~6" longer</p>
         </div>
     </section>
 
