--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <h1>Haven Drive Home for the Ornery</h1>
+        <h1>Haven Drive Home for the Seasoned and Temporally Advanced</h1>
         <p style="text-align: center;">Let this be your single point of truth for everything happening on Haven Drive.</p>
         <nav>
             <ul class="nav-buttons">
