--- a/index.html
+++ b/index.html
@@ -87,6 +87,12 @@
                         <td>https://ashevilleurological.com/dr-brien.cfm</td>
                         <td>Urologist</td>
                     </tr>
+                    <tr>
+                        <td>Magnet Medical Transportation</td>
+                        <td>828-782-0503</td>
+                        <td>https://magnetwnc.com/</td>
+                        <td>Transport home after discharge.  Must call at least 48 hrs in advance.  Mention Dennis when scheduling for discounted rate ($45 + $3.50/mi).</td>
+                    </tr>
                 </tbody>
             </table>
     <footer>
