--- a/index.html
+++ b/index.html
@@ -41,8 +41,16 @@
             <img src="imagejpeg_0.jpg.jpeg" alt="Shower entry and pan detail" title="Shower entry and pan detail">
             <img src="imagejpeg_1.jpg.jpeg" alt="Shower pan, interior view" title="Shower pan, interior view">
         </div>
-        <p>Shower pan needs to be 5" deep or less</p><br>
-        <p>New bed dimensions: 36" W x 80" L x 20" H; frame is ~6" longer</p>
+        /* <p>Shower pan needs to be 5" deep or less</p><br> */
+        <ul>
+            <li>Bedroom</li>
+            <li>Bed</li>
+            <li>Bathroom</li>
+            <li>Back Entrance</li>
+            <li>Carport/Driveway</li>
+            <li>Living Room</li>
+        </ul>
+        <p>New bed dimensions: 36" W x 80" L x 20" H (mattress); frame is same but 88" L</p>
     </section>
 
     <section id="contacts">
