--- a/index.html
+++ b/index.html
@@ -42,14 +42,16 @@
             <img src="imagejpeg_1.jpg.jpeg" alt="Shower pan, interior view" title="Shower pan, interior view">
         </div>
         /* <p>Shower pan needs to be 5" deep or less</p><br> */
-        <ul>
-            <li>Bedroom</li>
-            <li>Bed</li>
-            <li>Bathroom</li>
-            <li>Back Entrance</li>
-            <li>Carport/Driveway</li>
-            <li>Living Room</li>
-        </ul>
+        <nav>
+            <ul>
+                <li>Bedroom</li>
+                <li>Bed</li>
+                <li>Bathroom</li>
+                <li>Back Entrance</li>
+                <li>Carport/Driveway</li>
+                <li>Living Room</li>
+            </ul>
+        </nav>
         <p>New bed dimensions: 36" W x 80" L x 20" H (mattress); frame is same but 88" L</p>
     </section>
 
