--- a/index.html
+++ b/index.html
@@ -42,17 +42,47 @@
             <img src="imagejpeg_1.jpg.jpeg" alt="Shower pan, interior view" title="Shower pan, interior view">
         </div>
         /* <p>Shower pan needs to be 5" deep or less</p><br> */
-        <nav>
-            <ul>
-                <li>Bedroom</li>
-                <li>Bed</li>
-                <li>Bathroom</li>
-                <li>Back Entrance</li>
-                <li>Carport/Driveway</li>
-                <li>Living Room</li>
-            </ul>
-        </nav>
-        <p>New bed dimensions: 36" W x 80" L x 20" H (mattress); frame is same but 88" L</p>
+    <div class="row">
+        <div class="column">
+            <p>Bedroom</p>
+        </div>
+        <div class="column">
+            <p>Bed</p>
+        </div>
+        <div class="column">
+            <p>Bathroom</p>
+        </div>
+        <div class="column">
+            <p>Back Entrance</p>
+        </div>
+        <div class="column">
+            <p>Carport/Driveway</p>
+        </div>
+        <div class="column">
+            <p>Living Room</p>
+        </div>
+    </div>
+    <div class="row">
+        <div class="column">
+            <p>Bedroom</p>
+        </div>
+        <div class="column">
+            <p>New bed dimensions: 36" W x 80" L x 20" H (mattress); frame is same but 88" L</p>
+        </div>
+        <div class="column">
+            <p>Bathroom</p>
+        </div>
+        <div class="column">
+            <p>Back Entrance</p>
+        </div>
+        <div class="column">
+            <p>Carport/Driveway</p>
+        </div>
+        <div class="column">
+            <p>Living Room</p>
+        </div>
+    </div>    
+        <p></p>
     </section>
 
     <section id="contacts">
