--- a/index.html
+++ b/index.html
@@ -44,45 +44,45 @@
         /* <p>Shower pan needs to be 5" deep or less</p><br> */
     <div class="row">
         <div class="column">
-            <p>Bedroom</p>
+            <h3>Bedroom</h>
+            <p>Bedroom door 35 1/2" (with door removed).
+Closet door frame 26" width.
+Bedroom entryway opening 52”.
+Transition area after initial doorway (from left bedroom wall/closet door to right of opening).
+168-180” bedroom wall to wall. 
+(entry to dad dresser).
+12-13ft window to bathroom wall.
+Probably need to cover 6’x12’ area in bedroom </p>
         </div>
         <div class="column">
-            <p>Bed</p>
+            <h3>Bed</h>
+            <p>Mattress: 36" W x 80" L x 20" H; frame is same but 88" L</p>
         </div>
         <div class="column">
-            <p>Bathroom</p>
+            <h3>Bathroom</h>
+            <p>Toilet: commode alcove is 34.5" W</p>
+            <p>Shower: Step over to shower from floor is currently 9".  With hand made 1 step 4".  Step down into shower 5".</p>
         </div>
         <div class="column">
-            <p>Back Entrance</p>
+            <h3>Back Entrance</h>
+            <p>Back door width 34 1/2"
+Back door lip 4"
+(Planked entryway, no smooth surface or ramp)</p>
         </div>
         <div class="column">
-            <p>Carport/Driveway</p>
+            <h3>Carport/Driveway</h>
+            <p>Driveway: 13’ width x 16’ long 
+if we do largest area possible, but could also do just front and side strips</p>
+            <p>Carport height: 7’->8’->9’->8’->7’
+(Left,mid,center,mid,right)</p>
         </div>
         <div class="column">
-            <p>Living Room</p>
+            <h3>Living Room</h>
+            <p>Plastic sheeting/mats/carpet cover
+100” couch to wall
+Window to kitchen 11’ (132”)</p>
         </div>
     </div>
-    <div class="row">
-        <div class="column">
-            <p>Bedroom</p>
-        </div>
-        <div class="column">
-            <p>New bed dimensions: 36" W x 80" L x 20" H (mattress); frame is same but 88" L</p>
-        </div>
-        <div class="column">
-            <p>Bathroom</p>
-        </div>
-        <div class="column">
-            <p>Back Entrance</p>
-        </div>
-        <div class="column">
-            <p>Carport/Driveway</p>
-        </div>
-        <div class="column">
-            <p>Living Room</p>
-        </div>
-    </div>    
-        <p></p>
     </section>
 
     <section id="contacts">
