--- a/index.html
+++ b/index.html
@@ -44,43 +44,62 @@
         /* <p>Shower pan needs to be 5" deep or less</p><br> */
     <div class="row">
         <div class="column">
-            <h3>Bedroom</h>
-            <p>Bedroom door 35 1/2" (with door removed).
-Closet door frame 26" width.
-Bedroom entryway opening 52”.
-Transition area after initial doorway (from left bedroom wall/closet door to right of opening).
-168-180” bedroom wall to wall. 
-(entry to dad dresser).
-12-13ft window to bathroom wall.
-Probably need to cover 6’x12’ area in bedroom </p>
+            <h3>Bedroom</h3>
+            <ul>
+                <li>Bedroom door 35 1/2" (with door removed).</li>
+                <li>Closet door frame 26" width.</li>
+                <li>Bedroom entryway opening 52”.  
+                    <ul>
+                        <li>Transition area after initial doorway (from left bedroom wall/closet door to right of opening).</li>
+                    </ul></li>
+                <li>168-180” bedroom wall to wall. 
+                    <ul>
+                        <li>(entry to dad dresser).</li>
+                    </ul></li>
+                <li>12-13ft window to bathroom wall.
+                    <ul>
+                        <li>Probably need to cover 6’x12’ area in bedroom </li>
+                    </ul></li>
+            </ul>    
         </div>
         <div class="column">
-            <h3>Bed</h>
-            <p>Mattress: 36" W x 80" L x 20" H; frame is same but 88" L</p>
+            <h3>Bed</h3>
+            <ul>
+                <li>Mattress: 36" W x 80" L x 20" H</li>
+                <li>Frame is same but 88" L</li>
+            </ul>
         </div>
         <div class="column">
-            <h3>Bathroom</h>
-            <p>Toilet: commode alcove is 34.5" W</p>
-            <p>Shower: Step over to shower from floor is currently 9".  With hand made 1 step 4".  Step down into shower 5".</p>
+            <h3>Bathroom</h3>
+            <ul>
+                <li>Toilet: commode alcove is 34.5" W</li>
+                <li>Shower: Step over to shower from floor is currently 9".  With hand made 1 step 4".  Step down into shower 5".</li>
+            </ul>
         </div>
         <div class="column">
-            <h3>Back Entrance</h>
-            <p>Back door width 34 1/2"
-Back door lip 4"
-(Planked entryway, no smooth surface or ramp)</p>
+            <h3>Back Entrance</h3>
+            <ul>
+                <li>Back door width 34 1/2".</li>
+                <li>Back door lip 4".  (Planked entryway, no smooth surface or ramp)</li>
+            </ul>
         </div>
         <div class="column">
-            <h3>Carport/Driveway</h>
-            <p>Driveway: 13’ width x 16’ long 
-if we do largest area possible, but could also do just front and side strips</p>
-            <p>Carport height: 7’->8’->9’->8’->7’
-(Left,mid,center,mid,right)</p>
+            <h3>Carport/Driveway</h3>
+            <ul>
+                <li>Driveway: 13’ W x 16’ L if we do largest area possible, but could also do just front and side strips.</li>
+                <li>Carport height: 7’->8’->9’->8’->7’</li>
+                <li>(Left,mid,center,mid,right)</li>
+            </ul>
         </div>
         <div class="column">
-            <h3>Living Room</h>
-            <p>Plastic sheeting/mats/carpet cover
-100” couch to wall
-Window to kitchen 11’ (132”)</p>
+            <h3>Living Room</h3>
+            <ul>
+                <li>Plastic sheeting/mats/carpet cover
+                    <ul>
+                        <li>100” couch to wall.</li>
+                        <li>Window to kitchen 11’ (132”)</li>
+                    </ul></li>
+            </ul>
         </div>
     </div>
     </section>
