--- a/index.html
+++ b/index.html
@@ -41,7 +41,6 @@
             <img src="imagejpeg_0.jpg.jpeg" alt="Shower entry and pan detail" title="Shower entry and pan detail">
             <img src="imagejpeg_1.jpg.jpeg" alt="Shower pan, interior view" title="Shower pan, interior view">
         </div>
-        /* <p>Shower pan needs to be 5" deep or less</p><br> */
     <div class="row">
         <div class="column">
             <h3>Bedroom</h3>
@@ -51,15 +50,18 @@
                 <li>Bedroom entryway opening 52”.  
                     <ul>
                         <li>Transition area after initial doorway (from left bedroom wall/closet door to right of opening).</li>
-                    </ul></li>
+                    </ul>
+                </li>
                 <li>168-180” bedroom wall to wall. 
                     <ul>
                         <li>(entry to dad dresser).</li>
-                    </ul></li>
+                    </ul>
+                </li>
                 <li>12-13ft window to bathroom wall.
                     <ul>
                         <li>Probably need to cover 6’x12’ area in bedroom </li>
-                    </ul></li>
+                    </ul>
+                </li>
             </ul>    
         </div>
         <div class="column">
@@ -72,8 +74,21 @@
         <div class="column">
             <h3>Bathroom</h3>
             <ul>
-                <li>Toilet: commode alcove is 34.5" W</li>
-                <li>Shower: Step over to shower from floor is currently 9".  With hand made 1 step 4".  Step down into shower 5".</li>
+                <li>Toilet
+                    <ul>
+                        <li>commode alcove is 34.5" W</li>
+                    </ul>
+                </li>
+                <li>Shower
+                    <ul>
+                        <li>Step over to shower from floor is currently 9".
+                            <ul>
+                                <li>With hand made 1 step 4".</li>
+                                <li>Step down into shower needs to be 5" deep or less.</li>
+                            </ul>
+                        </li>
+                    </ul>
+                </li>
             </ul>
         </div>
         <div class="column">
