--- a/index.html
+++ b/index.html
@@ -151,21 +151,45 @@
                     </tr>
                     <tr>
                         <td>Dr. Shawn Bonsell</td>
-                        <td>828-694-7676</td>
+                        <td>(828) 694-7676</td>
                         <td>https://www.unchealth.org/care-services/doctors/b/shawn-bonsell-md</td>
                         <td>Orthopedic surgeon</td>
                     </tr>
                     <tr>
                         <td>Dr. James Brien</td>
-                        <td>828-253-5314</td>
+                        <td>(828) 253-5314</td>
                         <td>https://ashevilleurological.com/dr-brien.cfm</td>
                         <td>Urologist</td>
                     </tr>
                     <tr>
                         <td>Magnet Medical Transportation</td>
-                        <td>828-782-0503</td>
+                        <td>(828) 782-0503</td>
                         <td>https://magnetwnc.com/</td>
                         <td>Transport home after discharge.  Must call at least 48 hrs in advance.  Mention Dennis when scheduling for discounted rate ($45 + $3.50/mi).</td>
+                    </tr>
+                    <tr>
+                        <td>Mountain Projects</td>
+                        <td>(828) 452-1447</td>
+                        <td>https://mountainprojects.org/</td>
+                        <td>May be able to help with home modifications (hold this pending outcome of Verlin's assessment)</td>
+                    </tr>
+                    <tr>
+                        <td>No Boundaries</td>
+                        <td>(828) 456-7930</td>
+                        <td>https://www.facebook.com/NoBoundariesIntegratedServices/</td>
+                        <td>Has medical equipment lending closet, if we discover we need something we haven't already gotten.</td>
+                    </tr>
+                    <tr>
+                        <td>Independent Living (Sylva)</td>
+                        <td>(828) 586-3455</td>
+                        <td>n/a</td>
+                        <td>May be able to help with ramp if needed.</td>
+                    </tr>
+                    <tr>
+                        <td>Meals on Wheels</td>
+                        <td>(828) 356-2442</td>
+                        <td>n/a</td>
+                        <td>We should get on the waiting list now, since it's long, just to eventually help out even if Mom is able to continue doing most of the cooking</td>
                     </tr>
                 </tbody>
             </table>
