--- a/index.html
+++ b/index.html
@@ -191,6 +191,25 @@
                         <td>n/a</td>
                         <td>We should get on the waiting list now, since it's long, just to eventually help out even if Mom is able to continue doing most of the cooking</td>
                     </tr>
+                    <tr>
+                        <td>Mom's Meals</td>
+                        <td>(877) 402-1054</td>
+                        <td>https://www.momsmeals.com/</td>
+                        <td>Qualifies for two meals a day for two weeks.  Must be used within 30 days of discharge.  Ashley calling to set it up.</td>
+                    </tr>
+                    <tr>
+                        <td>Safe Ride</td>
+                        <td>(877) 841-1390</td>
+                        <td>https://www.saferidehealth.com/</td>
+                        <td>Qualifies for 12 trips within 60 days of discharge</td>
+                    </tr>
+                    <tr>
+                        <td>Angelina Williams</td>
+                        <td>(828) 506-3287</td>
+                        <td>n/a</td>
+                        <td>Possible option for house cleaning</td>
+                    </tr>
+                    
                 </tbody>
             </table>
     <footer>
