--- a/index.html
+++ b/index.html
@@ -198,8 +198,8 @@
                         <td>Qualifies for two meals a day for two weeks.  Must be used within 30 days of discharge.  Ashley calling to set it up.</td>
                     </tr>
                     <tr>
-                        <td>Safe Ride</td>
-                        <td>(877) 841-1390</td>
+                        <td>Safe Ride Health</td>
+                        <td>(877) 841-3647 (possibly 877-841-1390 as well)</td>
                         <td>https://www.saferidehealth.com/</td>
                         <td>Qualifies for 12 trips within 60 days of discharge</td>
                     </tr>
